Rename installer to match with OS name and arch.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -169,6 +169,7 @@ SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE.txt")
 SET(CPACK_PACKAGE_VERSION_MAJOR "1")
 SET(CPACK_PACKAGE_VERSION_MINOR "1")
 SET(CPACK_PACKAGE_VERSION_PATCH "0")
+SET(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
 SET(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/README.txt")
 SET(CPACK_RESOURCE_FILE_WELCOME "${PROJECT_SOURCE_DIR}/templates/Welcome.txt")
 
@@ -176,11 +177,11 @@ SET(CPACK_RESOURCE_FILE_WELCOME "${PROJECT_SOURCE_DIR}/templates/Welcome.txt")
 IF(CMAKE_SIZEOF_VOID_P EQUAL 4)
   SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "i386")
   SET(CPACK_RPM_PACKAGE_ARCHITECTURE "i386")
-  SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_FILE_NAME}-x86")
+  SET(PACKAGE_ARCH_EXT "x86")
 ELSE()
   SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
   SET(CPACK_RPM_PACKAGE_ARCHITECTURE "x86_64")
-  SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_FILE_NAME}-x64")
+  SET(PACKAGE_ARCH_EXT "x64")
 ENDIF()
 
 IF(WIN32 AND NOT UNIX)
@@ -198,6 +199,7 @@ ELSE(WIN32 AND NOT UNIX)
   SET(CPACK_INCLUDE_TOPLEVEL_DIRECTORY 0)
   SET(CPACK_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
   SET(CPACK_SET_DESTDIR "ON")
+  SET(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_VERSION}-${PACKAGE_ARCH_EXT})
   IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     SET(CPACK_GENERATOR "DEB")
     SET(CPACK_INSTALL_PREFIX "/usr")
@@ -206,10 +208,29 @@ ELSE(WIN32 AND NOT UNIX)
     SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
     SET(CPACK_DEBIAN_PACKAGE_SECTION "Libraries")
     STRING(TOLOWER "${CPACK_PACKAGE_NAME}" CPACK_PACKAGE_NAME_LOWERCASE) 
-    SET(CPACK_PACKAGE_FILE_NAME 
-      "${CPACK_PACKAGE_NAME_LOWERCASE}_${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")   
+    SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME_LOWERCASE}_${CPACK_PACKAGE_VERSION}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")   
   ELSEIF(APPLE)
     SET (CPACK_GENERATOR "PackageMaker")
+    IF(${CMAKE_SYSTEM_VERSION} MATCHES "^5\\.5") 
+      SET(MACOSX_NAME "puma")
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^6\\.8") 
+      SET(MACOSX_NAME "jaguar")
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^7\\.9") 
+      SET(MACOSX_NAME "panther")
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^8\\.11") 
+      SET(MACOSX_NAME "tiger")
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^9\\.8") 
+      SET(MACOSX_NAME "leopard")
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^10\\.8") 
+      SET(MACOSX_NAME "snowleopard")
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^11\\.4") 
+      SET(MACOSX_NAME "lion")
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^12\\.0") 
+      SET(MACOSX_NAME "mountainlion")
+    ELSE()
+      SET(MACOSX_NAME "unknown")
+    ENDIF()
+    SET(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-macosx-${MACOSX_NAME}-${PACKAGE_ARCH_EXT})
   ENDIF()
   #SET(CPACK_STRIP_FILES "bin/MyExecutable")
   #SET(CPACK_SOURCE_STRIP_FILES "")
