--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -107,6 +107,7 @@ include_directories ("${PROJECT_SOURCE_DIR}/src/libsbmlsim" ${LIBSBML_INCLUDE_DI
 # Shared library
 add_library(sbmlsim SHARED ${SOURCES_LIB})
 target_link_libraries(sbmlsim ${LIBSBML_LIBRARIES})
+set_target_properties(sbmlsim PROPERTIES VERSION "${PACKAGE_VERSION}" SOVERSION "${LIBSBMLSIM_VERSION_MAJOR}.${LIBSBMLSIM_VERSION_MINOR}")
 
 # Test program
 add_executable(test ${SOURCES_TEST})
@@ -178,11 +179,11 @@ SET(CPACK_PACKAGE_NAME "libsbmlsim")
 SET(CPACK_PACKAGE_VENDOR "LibSBMLSim development team")
 SET(CPACK_PACKAGE_CONTACT "LibSBMLSim development Team <sbmlsim@fun.bio.keio.ac.jp>")
 SET(CPACK_PACKAGE_DESCRIPTION_FILE "${PROJECT_SOURCE_DIR}/README.txt")
-SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE.txt")
-SET(CPACK_PACKAGE_VERSION_MAJOR "1")
-SET(CPACK_PACKAGE_VERSION_MINOR "2")
-SET(CPACK_PACKAGE_VERSION_PATCH "0")
+SET(CPACK_PACKAGE_VERSION_MAJOR "${LIBSBMLSIM_VERSION_MAJOR}")
+SET(CPACK_PACKAGE_VERSION_MINOR "${LIBSBMLSIM_VERSION_MINOR}")
+SET(CPACK_PACKAGE_VERSION_PATCH "${LIBSBMLSIM_VERSION_PATCH}")
 SET(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
+SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE.txt")
 SET(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/README.txt")
 SET(CPACK_RESOURCE_FILE_WELCOME "${PROJECT_SOURCE_DIR}/templates/Welcome.txt")
 
