--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,8 @@ cmake_minimum_required(VERSION 2.6)
 project(libsbmlsim)
 
 # version number
-SET(LIBSBMLSIM_VERSION_MAJOR "1")
-SET(LIBSBMLSIM_VERSION_MINOR "2")
-SET(LIBSBMLSIM_VERSION_PATCH "0")
-SET(PACKAGE_VERSION "${LIBSBMLSIM_VERSION_MAJOR}.${LIBSBMLSIM_VERSION_MINOR}.${LIBSBMLSIM_VERSION_PATCH}")
+file(STRINGS VERSION.txt PACKAGE_VERSION)
+string(REGEX REPLACE "^([0-9]+)\\.([0-9]+)\\..*$" "\\1.\\2" PACKAGE_COMPAT_VERSION "${PACKAGE_VERSION}")
 
 # cmake variables
 if(MSVC)
