Fixed versioning scheme for CPack. Confirmed to successfully build a package on Mavericks.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -187,10 +187,8 @@ SET(CPACK_PACKAGE_NAME "libsbmlsim")
 SET(CPACK_PACKAGE_VENDOR "LibSBMLSim development team")
 SET(CPACK_PACKAGE_CONTACT "LibSBMLSim development Team <sbmlsim@fun.bio.keio.ac.jp>")
 SET(CPACK_PACKAGE_DESCRIPTION_FILE "${PROJECT_SOURCE_DIR}/README.txt")
-SET(CPACK_PACKAGE_VERSION_MAJOR "${LIBSBMLSIM_VERSION_MAJOR}")
-SET(CPACK_PACKAGE_VERSION_MINOR "${LIBSBMLSIM_VERSION_MINOR}")
-SET(CPACK_PACKAGE_VERSION_PATCH "${LIBSBMLSIM_VERSION_PATCH}")
-SET(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
+SET(CPACK_PACKAGE_VERSION "${PACKAGE_VERSION}")
+SET(CPACK_PACKAGE_COMPAT_VERSION "${PACKAGE_COMPAT_VERSION}")
 SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE.txt")
 SET(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/README.txt")
 SET(CPACK_RESOURCE_FILE_WELCOME "${PROJECT_SOURCE_DIR}/templates/Welcome.txt")
@@ -224,7 +222,7 @@ ELSE()
 ENDIF()
 
 IF(WIN32 AND NOT UNIX)
-  SET(CPACK_PACKAGE_INSTALL_DIRECTORY "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
+  SET(CPACK_PACKAGE_INSTALL_DIRECTORY "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_COMPAT_VERSION}")
   # There is a bug in NSI that does not handle full unix paths properly. Make
   # sure there is at least one set of four (4) backlasshes.
   #SET(CPACK_PACKAGE_ICON "${CMake_SOURCE_DIR}/Utilities/Release\\\\InstallIcon.bmp")
@@ -250,22 +248,30 @@ ELSE(WIN32 AND NOT UNIX)
     SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME_LOWERCASE}_${CPACK_PACKAGE_VERSION}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")   
   ELSEIF(APPLE)
     SET (CPACK_GENERATOR "PackageMaker")
-    IF(${CMAKE_SYSTEM_VERSION} MATCHES "^5\\.5") 
+    IF(${CMAKE_SYSTEM_VERSION} MATCHES "^5\\.")
       SET(MACOSX_NAME "puma")
-    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^6\\.8") 
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^6\\.")
       SET(MACOSX_NAME "jaguar")
-    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^7\\.9") 
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^7\\.")
       SET(MACOSX_NAME "panther")
-    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^8\\.11") 
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^8\\.")
       SET(MACOSX_NAME "tiger")
-    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^9\\.8") 
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^9\\.")
       SET(MACOSX_NAME "leopard")
-    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^10\\.8") 
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^10\\.")
       SET(MACOSX_NAME "snowleopard")
-    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^11\\.4") 
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^11\\.")
       SET(MACOSX_NAME "lion")
-    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^12\\.0") 
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^12\\.")
       SET(MACOSX_NAME "mountainlion")
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^13\\.")
+      SET(MACOSX_NAME "mavericks")
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^14\\.")
+      SET(MACOSX_NAME "yosemite")
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^15\\.")
+      SET(MACOSX_NAME "elcapitan")
+    ELSEIF(${CMAKE_SYSTEM_VERSION} MATCHES "^16\\.")
+      SET(MACOSX_NAME "sierra")
     ELSE()
       SET(MACOSX_NAME "unknown")
     ENDIF()
