--- a/src/bindings/java/CMakeLists.txt
+++ b/src/bindings/java/CMakeLists.txt
@@ -21,7 +21,13 @@ SET(CMAKE_SWIG_FLAGS "")
 SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES CPLUSPLUS OFF)
 SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES SWIG_FLAGS "-includeall")
 SET(CMAKE_SWIG_FLAGS ${CMAKE_SWIG_FLAGS} -package jp.ac.keio.bio.fun.libsbmlsim)
-SWIG_ADD_MODULE(sbmlsimj java libsbmlsim.i ${SOURCES_LIB})
+IF(${CMAKE_VERSION} VERSION_LESS "3.8.0")
+  SWIG_ADD_MODULE(sbmlsimj java libsbmlsim.i ${SOURCES_LIB})
+ELSE()
+  SWIG_ADD_LIBRARY(sbmlsimj
+    LANGUAGE java
+    SOURCES libsbmlsim.i ${SOURCES_LIB})
+ENDIF()
 SWIG_LINK_LIBRARIES(sbmlsimj ${LIBSBML_LIBRARIES})
 
 file(COPY ${PROJECT_SOURCE_DIR}/examples/java/README.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
