--- a/src/bindings/perl/CMakeLists.txt
+++ b/src/bindings/perl/CMakeLists.txt
@@ -15,7 +15,13 @@ SET(CMAKE_SWIG_FLAGS "")
 
 SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES CPLUSPLUS OFF)
 SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES SWIG_FLAGS "-includeall")
-SWIG_ADD_MODULE(sbmlsimPerl perl libsbmlsim.i ${SOURCES_LIB})
+IF(${CMAKE_VERSION} VERSION_LESS "3.8.0")
+  SWIG_ADD_MODULE(sbmlsimPerl perl libsbmlsim.i ${SOURCES_LIB})
+ELSE()
+  SWIG_ADD_LIBRARY(sbmlsimPerl
+    LANGUAGE perl
+    SOURCES libsbmlsim.i ${SOURCES_LIB})
+ENDIF()
 SWIG_LINK_LIBRARIES(sbmlsimPerl ${PERL_LIBRARIES} ${LIBSBML_LIBRARIES})
 
 file(COPY ${PROJECT_SOURCE_DIR}/examples/perl/Test.pl DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
