Disabled DEBUG_MEMORY even if CMAKE_BUILD_TYPE is Debug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ option(PROGRESS_PRINT "Enable progress-print (only for developers)" OFF)
 if(NOT MSVC)
   if(CMAKE_BUILD_TYPE MATCHES Debug)
     add_definitions(-g -O0)
-    SET(DEBUG_MEMORY ON)
+    SET(DEBUG_MEMORY OFF)
   else(CMAKE_BUILD_TYPE MATCHES Debug)
     add_definitions(-O3)
   endif(CMAKE_BUILD_TYPE MATCHES Debug)
