--- a/src/bindings/python/CMakeLists.txt
+++ b/src/bindings/python/CMakeLists.txt
@@ -15,7 +15,13 @@ SET(CMAKE_SWIG_FLAGS "")
 
 SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES CPLUSPLUS OFF)
 SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES SWIG_FLAGS "-includeall")
-SWIG_ADD_LIBRARY(libsbmlsim LANGUAGE python SOURCES libsbmlsim.i ${SOURCES_LIB})
+IF(${CMAKE_VERSION} VERSION_LESS "3.8.0")
+  SWIG_ADD_MODULE(libsbmlsim python libsbmlsim.i ${SOURCES_LIB})
+ELSE()
+  SWIG_ADD_LIBRARY(libsbmlsim
+    LANGUAGE python
+    SOURCES libsbmlsim.i ${SOURCES_LIB})
+ENDIF()
 SWIG_LINK_LIBRARIES(libsbmlsim ${PYTHON_LIBRARIES} ${LIBSBML_LIBRARIES})
 
 # show messages
