adding skeleton for biosimulators inteface for LibSBMLsim

--- a/.github/workflows/releaseToBioSimulators.yml
+++ b/.github/workflows/releaseToBioSimulators.yml
@@ -1,22 +1,141 @@
-name: Release to BioSimulators registry
+name: Build test BioSimulators interface and release to BioSimulators registry
 
 on:
-  release:
-    types:
-      - published
+  push:
 
 jobs:
-  releaseToBioSimulators:
-    name: Release to BioSimulators registry
+  buildTestDeploy:
+    name: Build, test, and deploy BioSimulators interface
     runs-on: ubuntu-latest
-    steps:  
-      - name: Submit to BioSimulators registry
+    steps:
+      #############################################
+      ## Checkout repository
+      #############################################
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+
+      #############################################
+      ## Install package and its dependencies
+      #############################################
+      - name: Install Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+
+      - name: Setup pip cache
+        uses: actions/cache@v2
+        with:
+          path: /opt/hostedtoolcache/Python
+          key: ${{ runner.os }}-pip-${{ hashFiles('biosimulators/requirements.txt') }}-${{ hashFiles('biosimulators/requirements.optional.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install pip and setuptools
         run: |
-        VERSION="${GITHUB_REF/refs\/tags\/v/}"
-        REVISION=$(git rev-parse HEAD)  
-        curl \
-        -X POST \
-        -u ${{ secrets.BIOSIMULATORS_GH_USERNAME }}:${{ secrets.BIOSIMULATORS_GH_TOKEN }} \
-        -H "Accept: application/vnd.github.v3+json" \
-        https://api.github.com/repos/biosimulators/Biosimulators/issues \
-        -d "{\"labels\": [\"Validate/submit simulator\"], \"title\": \"Submit LibSBMLsim ${VERSION}\", \"body\": \"---\nid: libsbmlsim\nversion: ${VERSION}\nspecificationsUrl: https://raw.githubusercontent.com/libsbmlsim/libsbmlsim/${REVISION}/biosimulators.json\nspecificationsPatch:\n  version: ${VERSION}\nvalidateImage: false\ncommitSimulator: true\n\n---\"}"
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade setuptools
+
+      # install package
+      - name: Install the package
+        run: |
+          version=1.4.0
+          wget http://fun.bio.keio.ac.jp/software/libsbmlsim/downloads/libsbmlsim_${version}_amd64.deb -o /tmp/libsbmlsim_${version}_amd64.deb
+          sudo dpkg -i /tmp/libsbmlsim_${version}_amd64.deb
+
+          cd biosimulators
+          python -m pip install .[all]
+
+      #############################################
+      ## Lint
+      #############################################
+      - name: Install flake8
+        run: python -m pip install flake8
+
+      - name: Lint the package
+        run: |
+          cd biosimulators
+          python -m flake8
+
+      #############################################
+      ## Build Docker image
+      #############################################
+      - id: get-version-number
+        name: Get version number
+        env:
+          TAG: ${{ github.ref }}
+        run: |
+          if [[ "${TAG}" =~ ^refs/tags/ ]]; then
+            version="${TAG/refs\/tags\/v/}"
+          else
+            version=$(jq -r '.version' biosimulators.json)
+          fi
+
+          echo "::set-output name=version::$version"
+
+      - name: Build Docker image
+        run: |
+          REVISION=$(git rev-parse HEAD)
+          CREATED=$(date --rfc-3339=seconds | sed 's/ /T/')
+          docker build \
+            --label org.opencontainers.image.source=https://github.com/${{ github.repository }} \
+            --label org.opencontainers.image.revision=${REVISION} \
+            --label org.opencontainers.image.created=${CREATED} \
+            --build-arg VERSION=${{ steps.get-version-number.outputs.version }} \
+            --tag ghcr.io/libsbmlsim/libsbmlsim:${{ steps.get-version-number.outputs.version }} \
+            --tag ghcr.io/libsbmlsim/libsbmlsim:latest \
+            .
+
+      #############################################
+      ## Test
+      #############################################
+      - name: Install pytest
+        run: python -m pip install pytest pytest-cov
+
+      - name: Install the requirements for the tests
+        run: |
+          cd biosimulators
+          python -m pip install .[tests]
+
+      - name: Run the tests
+        run: |
+          cd biosimulators
+          python -m pytest tests/ --cov=./
+
+      #############################################
+      ## Release to BioSimulators registry
+      #############################################
+
+      - id: determine-if-release-needed
+        name: Determine if a release should be made
+        run: |
+          release="0"
+
+          if [[ "${{ github.ref }}" =~ ^refs/tags/ ]]; then
+            release="1"
+          fi
+
+          echo "::set-output name=release::$release"
+
+      # build Docker image and push to GitHub Container Registry
+      - name: Push Docker image
+        if: steps.determine-if-release-needed.outputs.release == '1'
+        run: |
+          docker login ghcr.io \
+            --username ${{ secrets.GHCR_USERNAME }} \
+            --password ${{ secrets.GHCR_TOKEN }}
+          docker push ghcr.io/libsbmlsim/libsbmlsim:${{ steps.get-version-number.outputs.version }}
+          docker push ghcr.io/libsbmlsim/libsbmlsim:latest
+
+      # Submit to BioSimulators registry
+      - name: Submit to BioSimulators registry
+        if: steps.determine-if-release-needed.outputs.release == '1'
+        run: |
+          REVISION=$(git rev-parse HEAD)
+          curl \
+            -X POST \
+            -u ${{ secrets.GH_ISSUE_USERNAME }}:${{ secrets.GH_ISSUE_TOKEN }} \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/biosimulators/Biosimulators/issues \
+            -d "{\"labels\": [\"Validate/submit simulator\"], \"title\": \"Submit LibSBMLsim ${{ steps.get-version-number.outputs.version }}\", \"body\": \"---\nid: libsbmlsim\nversion: ${{ steps.get-version-number.outputs.version }}\nspecificationsUrl: https://raw.githubusercontent.com/${{ github.repository }}/${REVISION}/biosimulators.json\nspecificationsPatch:\n  version: ${{ steps.get-version-number.outputs.version }}\n  image:\n    url: ghcr.io/libsbmlsim/libsbmlsim:${{ steps.get-version-number.outputs.version }}\nvalidateImage: true\ncommitSimulator: true\n\n---\"}"
