--- a/.github/workflows/releaseToBioSimulators.yml
+++ b/.github/workflows/releaseToBioSimulators.yml
@@ -135,7 +135,7 @@ jobs:
           REVISION=$(git rev-parse HEAD)
           curl \
             -X POST \
-            -u ${{ secrets.GH_ISSUE_USERNAME }}:${{ secrets.GH_ISSUE_TOKEN }} \
+            -u ${{ secrets.BIOSIMULATORS_GH_USERNAME }}:${{ secrets.BIOSIMULATORS_GH_TOKEN }} \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/biosimulators/Biosimulators/issues \
             -d "{\"labels\": [\"Validate/submit simulator\"], \"title\": \"Submit LibSBMLsim ${{ steps.get-version-number.outputs.version }}\", \"body\": \"---\nid: libsbmlsim\nversion: ${{ steps.get-version-number.outputs.version }}\nspecificationsUrl: https://raw.githubusercontent.com/${{ github.repository }}/${REVISION}/biosimulators.json\nspecificationsPatch:\n  version: ${{ steps.get-version-number.outputs.version }}\n  image:\n    url: ghcr.io/libsbmlsim/libsbmlsim:${{ steps.get-version-number.outputs.version }}\nvalidateImage: true\ncommitSimulator: true\n\n---\"}"
