--- a/.github/workflows/releaseToBioSimulators.yml
+++ b/.github/workflows/releaseToBioSimulators.yml
@@ -37,16 +37,6 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install --upgrade setuptools
 
-      # install package
-      - name: Install the package
-        run: |
-          version=1.4.0
-          wget http://fun.bio.keio.ac.jp/software/libsbmlsim/downloads/libsbmlsim_${version}_amd64.deb -o /tmp/libsbmlsim_${version}_amd64.deb
-          sudo dpkg -i /tmp/libsbmlsim_${version}_amd64.deb
-
-          cd biosimulators
-          python -m pip install .[all]
-
       #############################################
       ## Lint
       #############################################
@@ -59,21 +49,22 @@ jobs:
           python -m flake8
 
       #############################################
-      ## Build Docker image
+      ## Get and sync version number
       #############################################
       - id: get-version-number
         name: Get version number
-        env:
-          TAG: ${{ github.ref }}
         run: |
-          if [[ "${TAG}" =~ ^refs/tags/ ]]; then
-            version="${TAG/refs\/tags\/v/}"
-          else
-            version=$(jq -r '.version' biosimulators.json)
-          fi
+          VERSION=$(cat src/libsbmlsim/version.h | grep LIBSBMLSIM_DOTTED_VERSION | cut -d '"' -f 2)
+          echo "::set-output name=version::$VERSION"
 
-          echo "::set-output name=version::$version"
+      - name: Synchronize Python package with  version number
+        env:
+            VERSION: ${{ steps.get-version-number.outputs.version }}
+        run: echo "__version__ = '${VERSION}'" > biosimulators/biosimulators_libsbmlsim/_version.py
 
+      #############################################
+      ## Build Docker image
+      #############################################
       - name: Build Docker image
         run: |
           REVISION=$(git rev-parse HEAD)
@@ -83,25 +74,27 @@ jobs:
             --label org.opencontainers.image.revision=${REVISION} \
             --label org.opencontainers.image.created=${CREATED} \
             --build-arg VERSION=${{ steps.get-version-number.outputs.version }} \
-            --tag ghcr.io/libsbmlsim/libsbmlsim:${{ steps.get-version-number.outputs.version }} \
-            --tag ghcr.io/libsbmlsim/libsbmlsim:latest \
+            --tag ghcr.io/${{ github.repository }}/libsbmlsim:${{ steps.get-version-number.outputs.version }} \
+            --tag ghcr.io/${{ github.repository }}/libsbmlsim:latest \
             .
 
       #############################################
       ## Test
       #############################################
-      - name: Install pytest
-        run: python -m pip install pytest pytest-cov
-
-      - name: Install the requirements for the tests
-        run: |
-          cd biosimulators
-          python -m pip install .[tests]
-
       - name: Run the tests
         run: |
-          cd biosimulators
-          python -m pytest tests/ --cov=./
+          cwd=$(pwd)
+          docker run \
+              --rm \
+              --entrypoint bash \
+              --mount type=bind,source=${cwd},target=/root/libsbmlsim \
+              --workdir /root/libsbmlsim/biosimulators \
+              ghcr.io/${{ github.repository }}/libsbmlsim:latest \
+              -c "
+                  pip install pytest pytest-cov \
+                  && pip install -r tests/requirements.txt \
+                  && python -m pytest tests/ --cov biosimulators_libsbmlsim
+              "
 
       #############################################
       ## Release to BioSimulators registry
@@ -125,8 +118,8 @@ jobs:
           docker login ghcr.io \
             --username ${{ secrets.GHCR_USERNAME }} \
             --password ${{ secrets.GHCR_TOKEN }}
-          docker push ghcr.io/libsbmlsim/libsbmlsim:${{ steps.get-version-number.outputs.version }}
-          docker push ghcr.io/libsbmlsim/libsbmlsim:latest
+          docker push ghcr.io/${{ github.repository }}/libsbmlsim:${{ steps.get-version-number.outputs.version }}
+          docker push ghcr.io/${{ github.repository }}/libsbmlsim:latest
 
       # Submit to BioSimulators registry
       - name: Submit to BioSimulators registry
@@ -138,4 +131,4 @@ jobs:
             -u ${{ secrets.BIOSIMULATORS_GH_USERNAME }}:${{ secrets.BIOSIMULATORS_GH_TOKEN }} \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/biosimulators/Biosimulators/issues \
-            -d "{\"labels\": [\"Validate/submit simulator\"], \"title\": \"Submit LibSBMLsim ${{ steps.get-version-number.outputs.version }}\", \"body\": \"---\nid: libsbmlsim\nversion: ${{ steps.get-version-number.outputs.version }}\nspecificationsUrl: https://raw.githubusercontent.com/${{ github.repository }}/${REVISION}/biosimulators.json\nspecificationsPatch:\n  version: ${{ steps.get-version-number.outputs.version }}\n  image:\n    url: ghcr.io/libsbmlsim/libsbmlsim:${{ steps.get-version-number.outputs.version }}\nvalidateImage: true\ncommitSimulator: true\n\n---\"}"
+            -d "{\"labels\": [\"Validate/submit simulator\"], \"title\": \"Submit LibSBMLsim ${{ steps.get-version-number.outputs.version }}\", \"body\": \"---\nid: libsbmlsim\nversion: ${{ steps.get-version-number.outputs.version }}\nspecificationsUrl: https://raw.githubusercontent.com/${{ github.repository }}/${REVISION}/biosimulators.json\nspecificationsPatch:\n  version: ${{ steps.get-version-number.outputs.version }}\n  image:\n    url: ghcr.io/${{ github.repository }}/libsbmlsim:${{ steps.get-version-number.outputs.version }}\nvalidateImage: true\ncommitSimulator: true\n\n---\"}"
